@@ -1,11 +1,10 @@
 plugins {
     id 'com.asrevo.java-application-conventions'
-    id 'org.springframework.boot' version '3.3.1'
-    id 'io.spring.dependency-management' version '1.1.5'
-//    id 'org.graalvm.buildtools.native' version '0.10.2'
-    id("com.diffplug.spotless") version "7.0.0.BETA2"
+    id 'org.springframework.boot' version '3.4.3'
+    id 'io.spring.dependency-management' version '1.1.7'
+//    id 'org.graalvm.buildtools.native' version '0.10.5'
 }
-apply from: "$rootDir/helpers/common-methods.gradle"
+apply from: "$rootDir/build-logic/helpers/common-methods.gradle"
 group = 'com.asrevo.cvhome'
 
 repositories {
@@ -19,9 +18,13 @@ springBoot {
 }
 
 bootBuildImage {
-    builder = "paketobuildpacks/builder-jammy-tiny:latest"
-    imageName = createImageName("store-core/manager")
-    tags = createImageTags("store-core/manager",project.version)
+/*
+    builder = "bellsoft/buildpacks.builder:musl"
+*/
+    environment["BP_JVM_JLINK_ENABLED"] = "true"
+    environment["BP_JVM_JLINK_ARGS"] = " --compress zip-6 --no-header-files --no-man-pages --vm client --add-modules java.base,java.se,jdk.unsupported,jdk.crypto.ec"
+    imageName = createImageName("store-core/manager", project.version)
+    tags = createImageTags("store-core/manager", project.version)
     docker {
         publishRegistry {
             url = System.getenv("REGISTRY")
@@ -32,13 +35,19 @@ bootBuildImage {
 }
 
 ext {
-    set('springCloudVersion', "2023.0.2")
+    set('springCloudVersion', "2024.0.0")
 }
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+
     implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+    implementation 'org.springframework.amqp:spring-rabbit-stream'
+    implementation 'org.springframework.cloud:spring-cloud-stream'
+    implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit'
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
@@ -46,19 +55,22 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     runtimeOnly 'org.postgresql:postgresql'
 
-    implementation project(':commons:ecs-commons:fargate-task-info')
-    implementation project(':commons:ecs-commons:ecs-service-discoveryclient')
+    implementation project(':store-commons:ecs-commons:fargate-task-info')
+    implementation project(':store-commons:ecs-commons:ecs-service-discoveryclient')
 
-    implementation 'org.keycloak:keycloak-admin-client:25.0.0'
+    implementation 'org.keycloak:keycloak-admin-client:26.0.4'
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
 
-    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
-    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.5.0'
+    implementation 'org.mapstruct:mapstruct:1.6.3'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.8.5'
 
     implementation project(':store-core:manager:manager-events')
-    implementation project(':store-pod:commons')
-    implementation project(':commons:s2sc-commons')
-    implementation project(':commons:keycloak-users')
+    implementation project(':store-core:subscription:subscription-events')
+    implementation project(':store-pod:merchant:merchant-external-api')
+    implementation project(':store-core:subscription:subscription-external-api')
+    implementation project(':store-commons:autoconfigure')
+    implementation project(':store-commons:keycloak-client')
 
 //    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
     compileOnly 'org.projectlombok:lombok'
@@ -71,6 +83,7 @@ dependencies {
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:postgresql'
+    testImplementation 'org.testcontainers:rabbitmq'
 }
 
 //tasks.withType(org.springframework.boot.gradle.tasks.aot.ProcessAot).configureEach {
